--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,12 @@
-Package: haplot
+Package: microhaplot
 Type: Package
 Title: short read variant visualizer
 Version: 0.1.0
 Authors@R: person("Thomas", "Ng", email = "tngthomasng@gmail.com", role = c("aut", "cre"))
-Description: This package generates haplotype summary drawn from alignment
-    and variant files, specifically from SAM and VCF files. Supported by R's shiny
-    package, this dynamic generated graphical app serves the purpose of quality
-    assessment of haplotype in various levels from individual basis to locus
-    basis and to other labels. This app is also equipped with simple control panel
-    allowing you to identify and remove any poor quality read.
+Description: This package has two main functions: 1) to extract microhaplotype from
+    individual-based alignment and variant files, specifically from SAM and VCF files
+    2) to call and curate microhaplotype with the aid of simple filter criteria and
+    summaries plot found in the Shiny App interface.
 Depends:
     R (>= 3.1.2)
 License: GPL-3
@@ -24,8 +22,8 @@ Imports:
     shiny (>= 0.13.2),
     shinyBS (>= 0.61),
     tidyr (>= 0.4.1),
-URL: https://github.com/ngthomas/callBayes
-BugReports: https://github.com/ngthomas/callBayes/issues
+URL: https://github.com/ngthomas/microhaplot
+BugReports: https://github.com/ngthomas/microhaplot/issues
 RoxygenNote: 5.0.1
 Suggests: knitr,
     rmarkdown
