--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,6 +22,7 @@ Imports:
     shiny (>= 0.13.2),
     shinyBS (>= 0.61),
     tidyr (>= 0.4.1),
+    feather (>= 0.3.1),
 URL: https://github.com/ngthomas/microhaplot
 BugReports: https://github.com/ngthomas/microhaplot/issues
 RoxygenNote: 5.0.1
