--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ Imports:
     tidyr (>= 0.4.1),
     feather (>= 0.3.1),
     shinyWidgets (>= 0.4.3),
-    plotly (>= 4.8.0),
+    ggiraph (>= 0.6.0),
 URL: https://github.com/ngthomas/microhaplot
 BugReports: https://github.com/ngthomas/microhaplot/issues
 RoxygenNote: 6.0.1
