--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,3 +6,5 @@ export(mvHaplotype)
 export(runHaplot)
 export(runHaplotype)
 importFrom(magrittr,"%>%")
+importFrom(utils,combn)
+importFrom(utils,read.table)
