--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,6 +19,7 @@ Imports:
     grid (>= 3.1.2),
     gtools (>= 3.5.0),
     magrittr (>= 1.5),
+    plotly (>= 4.8.0),
     scales (>= 0.4.0),
     shiny (>= 0.13.2),
     shinyBS (>= 0.61),
