Pipe all group_by()'s though group_trim()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(RunSrMicrohap)
 export(mvHaplotype)
 export(runHaplot)
 export(runHaplotype)
+importFrom(dplyr,group_trim)
 importFrom(magrittr,"%>%")
 importFrom(utils,combn)
 importFrom(utils,read.table)
