major fn name changes: mvHaplotype -> mvShinyHaplot runHaplot -> prepHaplotFiles runHaplotype -> runShinyHaplot
edit haplot-data-prep: typo, format, and additional content

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,9 +2,9 @@
 
 export("%>%")
 export(RunSrMicrohap)
-export(mvHaplotype)
-export(runHaplot)
-export(runHaplotype)
+export(mvShinyHaplot)
+export(prepHaplotFiles)
+export(runShinyHaplot)
 importFrom(magrittr,"%>%")
 importFrom(utils,combn)
 importFrom(utils,read.table)
