--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,12 @@
 Package: microhaplot
 Type: Package
-Title: microhaplotype constructor and visualizer
+Title: Microhaplotype Constructor and Visualizer
 Version: 1.0.0.9000
 Authors@R: person("Thomas", "Ng", email = "tngthomasng@gmail.com", role = c("aut", "cre"))
-Description: This package 1) constructs microhaplotype from short read sequences, specifically
-    from sequence alignment - SAM and variant call - VCF files, and 
-    2) assists the curation of observed microhaplotypes through Shiny interface.
+Description: A downstream bioinformatics tool to construct and assist 
+    curation of microhaplotypes from short read sequences.
 Depends:
-    R (>= 3.1.2)
+    R (>= 3.1.2) 
 Encoding: UTF-8
 License: GPL-3
 LazyData: TRUE
@@ -27,6 +26,8 @@ Imports:
 URL: https://github.com/ngthomas/microhaplot
 BugReports: https://github.com/ngthomas/microhaplot/issues
 RoxygenNote: 6.1.1
-Suggests: knitr,
-    rmarkdown
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat
 VignetteBuilder: knitr
