--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Authors@R: person("Thomas", "Ng", email = "tngthomasng@gmail.com", role = c("aut
 Description: A downstream bioinformatics tool to construct and assist 
     curation of microhaplotypes from short read sequences.
 Depends:
-    R (>= 3.1.2) 
+    R (>= 3.1.2)
 Encoding: UTF-8
 License: GPL-3
 LazyData: TRUE
@@ -22,7 +22,7 @@ Imports:
     shinyBS (>= 0.61),
     tidyr (>= 0.4.1),
     shinyWidgets (>= 0.4.3),
-    ggiraph (>= 0.6.0),
+    ggiraph (>= 0.6.0)
 URL: https://github.com/ngthomas/microhaplot
 BugReports: https://github.com/ngthomas/microhaplot/issues
 RoxygenNote: 6.1.1
