pack hapture w/ more additional perl modules s.t. it reduce users burden to cpan perl mod. Add Perl version guard on runHaplot

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,5 @@ BugReports: https://github.com/ngthomas/microhaplot/issues
 RoxygenNote: 6.1.1
 Suggests: 
     knitr,
-    rmarkdown,
-    testthat
+    rmarkdown
 VignetteBuilder: knitr
